# ExploreGhActions

./: .cz.toml  CHANGELOG.md  README.md  pyproject.toml  version.txt
.github/: context_pr_closed.yml  pull_request_template.md  pull_request_template.md.bak
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  bug_fix.yml  doc.md  doc.yml  feature.md  feature.yml  other.md
.github/actions/config-tools/: action.yml
.github/workflows/: changed-src.yml  ci-release-pkg.yml  ci-release-pr.yml  ci-test-build-upload.yml  ci-test-bump-dev.yml  ci-test-conda.yml  ci-test-dev.yml  config_from_file.yml  context_pr_closed.yml  fake-main.yml  hash_pr_closed.yml  make_pr.yml  print_vars.yml  push_on_main.yml  reusable_ex.yml  services.yml  svc-installer.yml  test.yml  test_skip.yml  update-pr-title.yml  updates_on_push.yml
agents/: README.md
agents/agent1/: CHANGELOG.md  pyproject.toml
agents/agent1/src/agent1/: README.md
conda.recipe/: meta.yaml
example_wf/: generate_win_cert.yml  make_pr.yml  services.yml  updates_on_push.yml
path-trigger/: foo
pkg1/: pyproject.toml
pkg1/conda.recipe/: README.md  meta.yaml
pkg1/src/test/: README.md
products/: bug-fix.py  feat_2.txt  test_file.txt
products/services/: matrix.json
products/services/automation/: README.md
products/services/automation/test-c1_1234/: customer.json
products/services/svc-4/1234/: config.json
products/services/svc-5/1234/: config.json
scripts/: app_dir_to_rebuild.py  create_self_signed_certificate.ps1  customer_json.py
src/test/: README.md  __version__.py
