[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "test"
version = "0.0.0"   # updated by version_files below; consumed by conda.recipe

[tool.setuptools]
package-dir = {"" = "src"}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "test/$version"
version_scheme = "pep440"
version = "0.0.0"
version_files = [
    "src/test/__version__.py",
    "pyprojec.toml",
]
update_changelog_on_bump = true
major_version_zero = true   # only for development

[tool.commitizen.changelog]
incremental = false              # Ensure it processes all commits, not just the latest
prepend = true                   # Prepend new changelog entries to the file
changelog_file = "CHANGELOG.md"  # Specify the changelog file name
