[project]
name = "test"
version = "1.0.0+6b6970c"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "test/$version"  # this uses it from above
version_scheme = "semver"
version = "1.0.0+6b6970c"
version_files = [
    "src/test/__version__.py",
    "pyproject.toml",
]
update_changelog_on_bump = false  # explicitly update changelog
major_version_zero = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.commitizen.changelog]
incremental = false              # Ensure it processes all commits, not just the latest
prepend = true                   # Prepend new changelog entries to the file
changelog_file = "CHANGELOG.md"  # Specify the changelog file name
